--- a/.github/workflows/main_nurhazarifah.yml
+++ b/.github/workflows/main_nurhazarifah.yml
@@ -75,4 +75,8 @@ jobs:
         with:
           app-name: 'nurhazarifah'
           slot-name: 'Production'
+      - name: Start FastAPI app using Uvicorn
+        run: |
+          source venv/bin/activate
+          uvicorn app:app --host 0.0.0.0 --port 8000
           
